examples/regressions/230_unit_is_never.an
import Std.Throw.Throw, throw

unit_neverizer {Throw Never} =
    throw ()

main () =
    handler h for throw _ -> println "threw!"
    unit_neverizer h
    println "through!"

// args: --check --no-color
// expected exit status: 1
// expected stderr:
// examples/regressions/230_unit_is_never.an:4:11
// 3 | unit_neverizer {Throw Never} =
// 4 |     throw ()	// error: Argument 1 has type Unit but Never was expected
//   |           ^^
// 
// Found 1 error and 0 warnings

